Fix line overflow / Start to work on top overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,7 +27,7 @@ body {
     grid-template-columns: var(--gridTemplate);
 
     div {
-        // border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.1);
         width: var(--blockSize);
         height: var(--blockSize);
         // color: transparent;
